force-app/main/default/objects/Maintenance__c/Maintenance__c.object-meta.xml
<CustomObject>
    <label>Maintenance</label>
    <nameField>
        <displayFormat>M-{0000000000}</displayFormat>
        <label>Maintenance Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Maintenances</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>