force-app/main/default/objects/Maintenance__c/fields/Airframe_Inspection__c.field-meta.xml
<CustomField>
    <fullName>Airframe_Inspection__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Fuselage, Wings, Landing Gear, Control Surfaces, Doors and Hatches</description>
    <label>Airframe Inspection</label>
    <type>Checkbox</type>
</CustomField>