force-app/main/default/objects/Maintenance__c/fields/Avionics_and_Instruments__c.field-meta.xml
<CustomField>
    <fullName>Avionics_and_Instruments__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Navigation Systems, Communication Systems, Flight Instruments, Autopilot System</description>
    <label>Avionics and Instruments</label>
    <type>Checkbox</type>
</CustomField>