force-app/main/default/objects/Maintenance__c/fields/Cabin_and_Interior__c.field-meta.xml
<CustomField>
    <fullName>Cabin_and_Interior__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Seats and Seatbelts, Lighting and Emergency Exits, Cabin Cleanliness, Lavatory and Water Systems</description>
    <label>Cabin and Interior</label>
    <type>Checkbox</type>
</CustomField>