force-app/main/default/objects/Maintenance__c/fields/Documentation_and_Compliance__c.field-meta.xml
<CustomField>
    <fullName>Documentation_and_Compliance__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Logbook Entries Completed, Maintenance Records Updated, Airworthiness Directives (ADs) Checked, Service Bulletins (SBs) Reviewed</description>
    <label>Documentation and Compliance</label>
    <type>Checkbox</type>
</CustomField>