force-app/main/default/objects/Maintenance__c/fields/Electrical_Systems__c.field-meta.xml
<CustomField>
    <fullName>Electrical_Systems__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Battery Condition, Wiring and Connectors, Circuit Breakers and Fuses, Avionics Power Supply</description>
    <label>Electrical Systems</label>
    <type>Checkbox</type>
</CustomField>