force-app/main/default/objects/Maintenance__c/fields/Fire_Protection_and_Safety_Equipment__c.field-meta.xml
<CustomField>
    <fullName>Fire_Protection_and_Safety_Equipment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Fire Extinguishers, Smoke Detectors, Emergency Locator Transmitter, Oxygen Systems</description>
    <label>Fire Protection and Safety Equipment</label>
    <type>Checkbox</type>
</CustomField>