force-app/main/default/objects/Maintenance__c/fields/Hydraulic_and_Pneumatic_Systems__c.field-meta.xml
<CustomField>
    <fullName>Hydraulic_and_Pneumatic_Systems__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Hydraulic Fluid Levels, Lines and Hoses, Actuators and Pumps, Pneumatic Pressure and Valves</description>
    <label>Hydraulic and Pneumatic Systems</label>
    <type>Checkbox</type>
</CustomField>