force-app/main/default/objects/Maintenance__c/fields/Maintenance_Date__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_Date__c</fullName>
    <label>Maintenance Date</label>
    <type>DateTime</type>
</CustomField>