force-app/main/default/objects/Maintenance__c/fields/Powerplant_Engine__c.field-meta.xml
<CustomField>
    <fullName>Powerplant_Engine__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Engine Oil Level and Quality, Fuel System, Air Intakes and Exhausts, Engine Mounts and Vibration Checks, Ignition System</description>
    <label>Powerplant Engine</label>
    <type>Checkbox</type>
</CustomField>